# apps/api/lib/openapi/generated.go
@@ -3,6 +3,50 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.7.1 DO NOT EDIT.
 package openapi
 
+import (
+	"time"
+
+	openapi_types "github.com/oapi-codegen/runtime/types"
+)
+
+// CreateOrderRequest defines model for CreateOrderRequest.
+type CreateOrderRequest struct {
+	Customer        OrderCustomer      `json:"customer"`
+	ItemList        []OrderItem        `json:"itemList"`
+	ShippingAddress OrderAddress       `json:"shippingAddress"`
+	UserId          openapi_types.UUID `json:"userId"`
+}
+
+// Order defines model for Order.
+type Order struct {
+	CreatedAt       time.Time          `json:"createdAt"`
+	Customer        OrderCustomer      `json:"customer"`
+	Id              openapi_types.UUID `json:"id"`
+	ItemList        []OrderItem        `json:"itemList"`
+	ShippingAddress OrderAddress       `json:"shippingAddress"`
+	UserId          openapi_types.UUID `json:"userId"`
+}
+
+// OrderAddress defines model for OrderAddress.
+type OrderAddress struct {
+	AddressLine1 string  `json:"addressLine1"`
+	AddressLine2 *string `json:"addressLine2,omitempty"`
+	PostCode     string  `json:"postCode"`
+}
+
+// OrderCustomer defines model for OrderCustomer.
+type OrderCustomer struct {
+	Email    openapi_types.Email `json:"email"`
+	FullName string              `json:"fullName"`
+}
+
+// OrderItem defines model for OrderItem.
+type OrderItem struct {
+	MarketPrice int64  `json:"marketPrice"`
+	ProductId   string `json:"productId"`
+	Quantity    int    `json:"quantity"`
+}
+
 // Product defines model for Product.
 type Product struct {
 	Description string `json:"description"`
@@ -12,8 +56,20 @@ type Product struct {
 	Price       int64  `json:"price"`
 }
 
+// ListOrdersParams defines parameters for ListOrders.
+type ListOrdersParams struct {
+	// UserId User ID used to filter orders.
+	UserId *openapi_types.UUID `form:"userId,omitempty" json:"userId,omitempty"`
+
+	// Id Order ID used to filter orders.
+	Id *openapi_types.UUID `form:"id,omitempty" json:"id,omitempty"`
+}
+
 // ListProductsParams defines parameters for ListProducts.
 type ListProductsParams struct {
 	// Ids Comma-separated product IDs to filter by.
 	Ids *[]string `form:"ids,omitempty" json:"ids,omitempty"`
 }
+
+// CreateOrderJSONRequestBody defines body for CreateOrder for application/json ContentType.
+type CreateOrderJSONRequestBody = CreateOrderRequest
